src/test/deca/context/valid/condition_boolean.deca
{
	boolean boo = true;
	if (boo == false){}
}
